[package]
name = "basechem"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"
description = "Minimalistic crate of base types for chemistry"
keywords = ["chemistry", "chemical", "elements"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/basechem"

[dependencies]
strum = "0.16.0"
strum_macros = "0.16.0"
